--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "good": "^2.4.2",
     "handlebars": "^2.0.0",
     "hapi": "^7.1.1",
+    "hapi-auth-cookie": "^1.3.2",
     "irc": "^0.3.7",
     "mongoose": "^3.8.18",
     "q": "^1.0.1",
